[package]
name = "hikma"
version = "0.1.0"
description = "Hikma text editor"
authors = ["you"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hikma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

